# 3D-viewer

./: .gitignore  CMakeLists.txt  GeometryPrimitives.cpp  GeometryPrimitives.h  OpenglRenderSystem.cpp  README.md  ViewerWindow.cpp  ViewerWindow.h  glad.c  main.cpp
.github/workflows/: cmake-single-platform.yml
glad/: glad.h
glad/include/glad/: glad.h
